[package]
name = "pretty-log"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A simple logger for Rust. Contains traits for Option and Result."
authors = ["viktormarinho"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
